<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Mobile Products</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Mobile</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Mobiles product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Mobile Product</string>

    <!-- Title for the activity to EDIT a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_mobile_product">Edit a Mobile Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Product Details</string>

    <!-- Label for supplier name information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Supplier Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_email">Email</string>

    <string name="hint_product_quantity">Quantity</string>
    <string name="category_supplier_email">Supplier Email</string>
    <string name="supplier_order_button">Order</string>
    <string name="supplier_delete_button">Delete</string>

    <!-- Units for currency of the product ($) [CHAR LIMIT=5] -->
    <string name="unit_product_currency">$</string>

    <!-- Label for dropdown menu option if the product's gender is unknown [CHAR LIMIT=20] -->
    <string name="supplier_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the product is Technology co [CHAR LIMIT=20] -->
    <string name="supplier_techno_company">Technology Company</string>

    <!-- Label for dropdown menu option if the product is Phone co [CHAR LIMIT=20] -->
    <string name="supplier_phone_company">Phone Company</string>

    <string name="editor_insert_product_failed">Failed insert product data</string>

    <string name="editor_insert_product_successful">Product saved successfully</string>

    <string name="editor_update_product_failed">Failed update product data</string>

    <string name="editor_update_product_successful">product updated successfully</string>

    <!-- Title text for the empty view, which describes the empty image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There is no products in the store...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="editor_delete_all_products_finished">Delete all products finished!!</string>
    <string name="button_sale">Sale</string>
    <string name="price_textView">Price: </string>
    <string name="phone_textView">Phone: </string>
    <string name="hint_product_phone">Phone Num. </string>
    <string name="supplier_save_button">Save</string>
    <string name="supplier_call_button">Call</string>
    <string name="plus_button">+</string>
    <string name="less_button">-</string>
    <string name="phone_number_cannont_be_empty">Phone number cannot be empty!!</string>
    <string name="name_cannot_be_null">Name of product cannot be null!!</string>
    <string name="price_cannot_be_null">Price of product cannot be null!!</string>
    <string name="email_cannot_be_null">Email of supplier cannot be null!!</string>
    <string name="all_field_cannot_be_null">Please fill all the fields before save!!</string>
</resources>