<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of pets -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_margin">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/textViewColors"
        tools:text="Product_name"/>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/price_textView"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/textViewColors" />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorPrimary"  />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/unit_product_currency"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorPrimary" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="In stock:"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textViewColors" />
        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textViewColors"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text=" pcs"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textViewColors" />
    </LinearLayout>

</LinearLayout>
    <Button
        android:id="@+id/saleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:background="@color/colorAccent"
        android:focusable="false"
        android:hint="sale"
        android:text="@string/button_sale" />
</RelativeLayout>